live apps fixed nowrap test4

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -272,8 +272,9 @@ figure {
   a,
   > img {
     @include breakpoint($small) {
-      width: calc(33% - 0.5em);
+      width: calc(30% - 0.5em);
     }
+    border: 0.1em solid transparent;
   }
 }
 
